--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -70,11 +70,11 @@ jobs:
           # Linux
           - platform: linux
             arch: 'x86'
-            sconsflags: 'bits=32'
+            sconsflags: 'bits=32 use_llvm=yes'
             os: 'ubuntu-20.04'
           - platform: linux
             arch: 'x64'
-            sconsflags: 'bits=64'
+            sconsflags: 'bits=64 use_llvm=yes'
             os: 'ubuntu-20.04'
 
           # macOS
